<resources>
    <string name="app_name">P04_115_HidaMuhimmatulHusna_TugasPengembangan</string>
    <string-array name="daftar_makanan">
        <item>Bakso</item>
        <item>Ayam Goreng</item>
        <item>Mie Rebus</item>
        <item>Nasi Padang</item>
        <item>Ikan Bakar</item>
        <item>Seblak</item>
    </string-array>

    <string-array name="kategori">
        <item>Makanan</item>
        <item>Minuman</item>
    </string-array>

    <string name="simpan">SIMPAN</string>
    <string name="kode_pemesanan">Kode Pemesanan</string>
    <string name="nama_pemesanan">Nama Pemesanan</string>
    <string name="alamat">Alamat</string>
    <string name="phone">Phone</string>
</resources>