<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/kode_pemesanan"
        android:inputType="textShortMessage" />

    <Spinner
        android:id="@+id/listItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@id/times"
        android:layout_toLeftOf="@id/times"
        android:entries="@array/daftar_makanan"
        android:padding="15dp" />

    <Spinner
        android:id="@+id/times"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:entries="@array/kategori" />

    <Button
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/times"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/simpan" />

    <EditText
        android:id="@+id/nama_pesanan"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/times"
        android:layout_marginTop="33dp"
        android:autofillHints=""
        android:ems="60"
        android:hint="@string/nama_pemesanan"
        android:inputType="textLongMessage" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nama_pesanan"
        android:layout_marginBottom="-92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nama_pesanan"
        android:layout_marginBottom="-124dp"
        android:hint="@string/alamat"
        android:inputType="textLongMessage"
        android:autofillHints="" />

</RelativeLayout>
